--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "generate": "nuxt generate"
   },
   "dependencies": {
+    "axios": "0.27.2",
     "core-js": "^3.25.3",
     "lodash": "^4.17.21",
     "nuxt": "^2.15.8",
